# cookbook

./: .gitignore  README.md  setup.cfg  setup.py  workflow.ipynb
data/: README.md  prepare_test_data.ipynb  t2m_daily_1950-2021_2deg_clustered_226_300E_30_70N.nc  t2m_daily_1959-2021_2deg_clustered_226_300E_30_70N.nc
models/: transformer_train_checkpoint.pt
src/: autoencoder.py  transformer.py  utils.py
workflow/: comp_pred_ridge_and_LSTM.ipynb  demo.ipynb  model.onnx  pred_ridge.ipynb  pred_sea_ice_transformer.ipynb  pred_temperature_CNN.ipynb  pred_temperature_LSTM.ipynb  pred_temperature_autoencoder.ipynb  pred_temperature_ridge.ipynb  pred_temperature_transformer.ipynb  regrid-test.ipynb  ridge_xai_example.ipynb  xai_temperature_ridge.ipynb  zarr_test.ipynb
workflow/data_driven_forecasts/: comp_pred_ridge_and_LSTM.ipynb  pred_temperature_LSTM.ipynb  pred_temperature_autoencoder.ipynb  pred_temperature_ridge.ipynb  pred_temperature_transformer.ipynb
workflow/xai/: pred_temperature_LSTM_xai_LIME.ipynb
