# see documentation
# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html


[metadata]
author = AI4S2S Team

[options]
python_requires = >=3.9,<3.11
zip_safe = False
include_package_data = True
packages = find_namespace:
install_requires =
    lilio
    matplotlib
    numpy
    scikit-learn
    torch
    tqdm
    wandb
    xarray

[options.packages.find]
include = src, src.*